<resources>
    <string name="app_name">Family Map</string>
    <string name="host_name_string">Server Host:</string>
    <string name="port_number_string">Server Port:</string>
    <string name="username_string">User Name:</string>
    <string name="password_string">Password:</string>
    <string name="first_name_string">First Name:</string>
    <string name="last_name_string">Last Name:</string>
    <string name="email_string">Email:</string>
    <string name="gender_string">Gender:</string>
    <string name="gender_male_string">Male</string>
    <string name="gender_female_string">Female</string>
    <string name="sign_in_string">SIGN IN</string>
    <string name="register_string">REGISTER</string>
    <string name="hint_host">Enter the host server\'s ip address</string>
    <string name="hint_port">Enter the host server\'s port number</string>
    <string name="hint_username">Enter username</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_first_name">Enter First Name</string>
    <string name="hint_last_name">Enter Last Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="success_toast">Successful!</string>
    <string name="failure_toast">Failed!</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="life_stories_main">Life Story Lines</string>
    <string name="life_stories_sub">SHOW LIFE STORY LINES</string>
    <string name="family_tree_main">Family Tree Lines</string>
    <string name="family_tree_sub">SHOW FAMILY TREE LINES</string>
    <string name="spouse_main">Spouse Lines</string>
    <string name="spouse_sub">SHOW SPOUSE LINES</string>
    <string name="father_main">Father\'s Side</string>
    <string name="father_sub">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_main">Mother\'s Side</string>
    <string name="mother_sub">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_main">Male Events</string>
    <string name="gender_sub">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_main">Female Events</string>
    <string name="logout_main">Logout</string>
    <string name="logout_sub">RETURN TO LOGIN SCREEN</string>
    <string name="default_map">Click on a marker to see event details</string>
    <string name="default_textview">Default</string>
</resources>
