<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_stories_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life_stories_sub">

            </TextView>
        </LinearLayout>
        <Switch
            android:id="@+id/life_stories_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_tree_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/family_tree_sub">

            </TextView>
        </LinearLayout>
        <Switch
            android:id="@+id/family_tree_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spouse_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spouse_sub">

            </TextView>
        </LinearLayout>
        <Switch
            android:id="@+id/spouse_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/father_sub">

            </TextView>
        </LinearLayout>
        <Switch
            android:id="@+id/father_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mother_sub">

            </TextView>
        </LinearLayout>
        <Switch
            android:id="@+id/mother_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_sub">

            </TextView>
        </LinearLayout>
        <Switch
            android:id="@+id/male_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_sub">

            </TextView>
        </LinearLayout>
        <Switch
            android:id="@+id/female_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Switch>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/logout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_main">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_sub">

            </TextView>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="2dp">
    </Space>

</LinearLayout>